--- a/src/assets/scss/blk-design-system-react/custom/_footer.scss
+++ b/src/assets/scss/blk-design-system-react/custom/_footer.scss
@@ -1,7 +1,7 @@
 .footer{
     padding: 50px 0;
-    border-top: 2px solid #435DB5;
-    background: radial-gradient(ellipse at bottom, #292D61 30%, $background-black 80%);
+    border-top: 2px solid #232323;
+    background: radial-gradient(ellipse at bottom, #232323 30%, $background-black 80%);
 
     [class*="container-"] {
       padding: 0;
