Fix bug of current team page

--- a/src/assets/scss/blk-design-system-react/custom/_card.scss
+++ b/src/assets/scss/blk-design-system-react/custom/_card.scss
@@ -11,6 +11,9 @@
       color: rgba($white, 0.6);
     }
 
+    .card.card-coin .card-header {
+      margin: -100px auto 20px; }
+      
     .card-title {
       margin-bottom: .75rem;
     }
